Add buttons to play rounds

--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="main.js"></script>
+    <script src="main.js" defer></script>
 </head>
 
 <body>
+
+    <div class="player-score"></div>
+    <div class="comp-score"></div>
+
+
+    <button id="choice-rock">Rock</button>
+    <button id="choice-paper">Paper</button>
+    <button id="choice-scissors">Scissors</button>
+
+    <div class="round-results"></div>
+
+    <div class="final-results"></div>
 
 </body>
 
