--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="main.js" defer></script>
+    <script src="scripts.js" defer></script>
 </head>
 
 <body>
@@ -13,10 +13,11 @@
     <div class="player-score"></div>
     <div class="comp-score"></div>
 
-
-    <button id="choice-rock">Rock</button>
-    <button id="choice-paper">Paper</button>
-    <button id="choice-scissors">Scissors</button>
+    <div class="choices">
+        <button id="choice-rock">Rock</button>
+        <button id="choice-paper">Paper</button>
+        <button id="choice-scissors">Scissors</button>
+    </div>
 
     <div class="round-results"></div>
 
