Add round winner display

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <button id="choice-scissors">Scissors</button>
     </div>
 
-    <div class="round-results"></div>
+    <div id="round-results"></div>
 
     <div class="final-results"></div>
 
