Move around HTML, Add Score tracking
Reorganized html for better testing & readability

Tracks score for both players over time

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 
 <body>
 
-    <div class="player-score"></div>
-    <div class="comp-score"></div>
 
     <div class="choices">
         <button id="choice-rock">Rock</button>
         <button id="choice-paper">Paper</button>
         <button id="choice-scissors">Scissors</button>
     </div>
+
+    <div id="player-score"></div>
+    <div id="comp-score"></div>
 
     <div id="round-results"></div>
 
